@startuml password

title Validación de Contraseñas

interface PoliticaContrasena {
  + esValida(contrasena: String): boolean
  + getMensajeError(): String
}

class PoliticaRegex {
  - patron: Pattern
  - mensajeError: String
  --
  + esValida(contrasena: String): boolean
  + getMensajeError(): String
}

class PoliticaLongitud {
  - longitudMinima: int
  - longitudMaxima: int
  --
  + esValida(contrasena: String): boolean
  + getMensajeError(): String
}

class PoliticaContrasenasExcluidas {
  - contrasenasExcluidas: Set<String>
  --
  + esValida(contrasena: String): boolean
  + getMensajeError(): String
}

class ValidadorContrasena {
  - politicas: List<PoliticaContrasena>
  --
  + validar(contrasena: String): void
  - getMensajeError(politicasAValidar: List<PoliticaContrasena>): String
}

class ValidacionContrasenaException extends RuntimeException {
  - politicasAValidar: List<PoliticaContrasena>
  --
  + getPoliticasAValidar(): List<PoliticaContrasena>
}

PoliticaContrasena <|.. PoliticaRegex
PoliticaContrasena <|.. PoliticaLongitud
PoliticaContrasena <|.. PoliticaContrasenasExcluidas
ValidadorContrasena --> "*" PoliticaContrasena
ValidadorContrasena ..> ValidacionContrasenaException
ValidacionContrasenaException -> "*" PoliticaContrasena

@enduml
